<resources>
    <string name="app_name">Invasion</string>

    <string name="hello_world">Hello world!</string>
    <string name="txt_title">Alien Invasion</string>
    <string name="btn_play">Play Game</string>
    <string name="btn_donation">Donation</string>
    <string name="btn_about">About</string>
    <string name="btn_close">Close</string>
    <string name="title_activity_play">Play Game</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_donation">Donation</string>
    <string name="title_activity_close">Close</string>

    <string name="lbl_score">Score</string>
    <string name="lbl_life">Life</string>
    <string name="lbl_level">Level</string>
</resources>
