<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/fondo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_title"
        android:id="@+id/txt_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_play"
        android:id="@+id/btn_play"
        android:layout_below="@+id/txt_title"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/txt_title"
        android:layout_alignEnd="@+id/txt_title"
        android:layout_alignLeft="@+id/txt_title"
        android:layout_alignStart="@+id/txt_title"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_about"
        android:id="@+id/btn_about"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/btn_play"
        android:layout_alignLeft="@+id/btn_play"
        android:layout_alignStart="@+id/btn_play"
        android:layout_alignRight="@+id/btn_play"
        android:layout_alignEnd="@+id/btn_play"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_close"
        android:id="@+id/btn_close"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/btn_about"
        android:layout_alignRight="@+id/btn_about"
        android:layout_alignEnd="@+id/btn_about"
        android:layout_alignLeft="@+id/btn_about"
        android:layout_alignStart="@+id/btn_about" />
</RelativeLayout>
