<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.shakingweb.www.invasion.play"
    android:background="@drawable/galaxia">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_score"
        android:id="@+id/lbl_score"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txt_score"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/lbl_score"
        android:layout_toEndOf="@+id/lbl_score"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lbl_life"
        android:id="@+id/lbl_lifes"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/plane"
        android:layout_alignEnd="@+id/plane"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txt_lifes"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/lbl_lifes"
        android:layout_toEndOf="@+id/lbl_lifes"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbl_level"
        android:id="@+id/lbl_level"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btn_red_circle"
        android:layout_alignEnd="@+id/btn_red_circle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txt_level"
        android:layout_toRightOf="@+id/lbl_level"
        android:layout_toEndOf="@+id/lbl_level"
        android:textSize="20sp"
        android:textColor="#ffffffff"
        android:layout_marginLeft="10dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/arrow_left"
        android:src="@drawable/flecha_izquierda"
        android:layout_above="@+id/arrow_bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/arrow_up"
        android:src="@drawable/flecha_arriba"
        android:layout_above="@+id/arrow_left"
        android:layout_toRightOf="@+id/arrow_left"
        android:layout_toEndOf="@+id/arrow_left" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/arrow_bottom"
        android:src="@drawable/flecha_abajo"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/arrow_left"
        android:layout_toEndOf="@+id/arrow_left" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_yellow_circle"
        android:src="@drawable/boton_redondo_amarillo"
        android:layout_alignTop="@+id/arrow_right"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_green_circle"
        android:src="@drawable/boton_redondo_verde"
        android:layout_below="@+id/btn_yellow_circle"
        android:layout_alignLeft="@+id/btn_blue_circle"
        android:layout_alignStart="@+id/btn_blue_circle" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_red_circle"
        android:src="@drawable/boton_redondo_rojo"
        android:layout_above="@+id/btn_green_circle"
        android:layout_toLeftOf="@+id/btn_green_circle"
        android:layout_toStartOf="@+id/btn_green_circle" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_blue_circle"
        android:src="@drawable/boton_redondo_azul"
        android:layout_alignTop="@+id/arrow_up"
        android:layout_toLeftOf="@+id/btn_yellow_circle"
        android:layout_toStartOf="@+id/btn_yellow_circle" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/plane"
        android:layout_gravity="center_horizontal|bottom"
        android:src="@drawable/nave"
        android:visibility="visible"
        android:layout_above="@+id/arrow_up"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/arrow_right"
        android:src="@drawable/flecha_derecha"
        android:layout_gravity="center"
        android:layout_above="@+id/arrow_bottom"
        android:layout_toRightOf="@+id/arrow_bottom"
        android:layout_toEndOf="@+id/arrow_bottom" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shoot_ahead"
        android:layout_above="@+id/plane"
        android:layout_centerHorizontal="true"
        android:src="@drawable/shoot_ahead"
        android:adjustViewBounds="false"
        android:visibility="visible" />

</RelativeLayout>
